fetched the single category data from api

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+    <!-- font Awesome kit link -->
+    <script src="https://kit.fontawesome.com/f6e4edba18.js" crossorigin="anonymous"></script>
+
     <style>
         .font-inter {
             font-family: 'Inter', sans-serif;
@@ -44,6 +47,12 @@
 
 
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <div id="card-container">
+                
             </div>
         </section>
     </main>
