--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
             </div>
         </section>
 
+        <!-- card container loaded dynamically from api -->
         <section>
-            <div id="card-container">
+            <div id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
                 
+            </div>
+
+            <div id="drawing-category">
+
             </div>
         </section>
     </main>
