created blog file and linked it to the blog button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <nav class="mt-12 flex items-center justify-between">
             <a href="#"><img src="Assets/images/Logo.png" alt=""></a>
             <button class="btn btn-active px-5 text-lg font-medium">Sort by view</button>
-            <button class="btn btn-active text-white bg-[#FF1F3D] px-5 text-lg font-medium">Blog</button>
+            <a href="blog.html" target="_blank">
+                <button class="btn btn-active text-white bg-[#FF1F3D] px-5 text-lg font-medium">Blog</button>
+            </a>
         </nav>
         <hr class="my-8">
     </header>
