make the category flex direction column in small devices

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body class="container mx-auto font-inter">
     <header>
-        <nav class="mt-12 flex items-center justify-between">
+        <nav class="mt-12 flex flex-col md:flex-row items-center justify-between space-y-4">
             <a href="#"><img src="Assets/images/Logo.png" alt=""></a>
             <button class="btn btn-active px-5 text-lg font-medium">Sort by view</button>
             <a href="blog.html" target="_blank">
